# langgraph-approval-hub

./: .env.example  .env.local.example  .env.vercel.tmp  .gitignore  LICENSE  README.md  demo.ipynb  jest.config.ts  jest.environment.ts  jest.polyfills.ts  jest.setup.ts  package-lock.json  package.json  setup.py  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
.claude/: launch.json
.github/workflows/: ci.yml
__tests__/api/: approvals.test.ts  audit.test.ts  decide.test.ts  interrupt.test.ts
__tests__/components/: ApprovalTable.test.tsx  CopyButton.test.tsx  DashboardClient.test.tsx  DocsNav.test.tsx  StatusBadge.test.tsx
__tests__/lib/: escalation.test.ts  notifications.test.ts  resolveEmailRecipients.test.ts
app/: layout.tsx  page.tsx
app/(main)/: layout.tsx  page.tsx
app/(main)/audit/: page.tsx
app/(main)/settings/: page.tsx
app/api/approvals/: route.ts
app/api/audit/: route.ts
app/api/health/: route.ts
app/api/interrupt/: route.ts
app/api/teams/: route.ts
app/approval/[id]/: page.tsx
app/audit/: page.tsx
app/docs/: docs.module.css  layout.tsx  page.tsx
app/settings/: page.tsx
components/: ApprovalTable.tsx  AuditTable.tsx  CopyButton.tsx  DashboardClient.tsx  DocsNav.tsx  Sidebar.tsx  StatsBar.tsx  StatusBadge.tsx  Timeline.tsx
docs/superpowers/plans/: 2026-04-18-dashboard-filters-ux.md  2026-04-18-docs-page-notifications-fix.md
docs/superpowers/specs/: 2026-04-18-dashboard-filters-ux.md  2026-04-18-docs-page-design.md
lib/: demo-seed.ts  escalation.ts  formatDate.ts  notifications.ts  supabase.ts  useRealtimeRefresh.ts
sdk/: README.md  pyproject.toml  self_test.py
sdk/langgraph_approval_hub/: __init__.py  client.py
sdk/tests/: test_client.py
supabase/: schema.sql
types/: index.ts
(+5 files in other folders)
