[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-approval-hub"
version = "0.2.0"
description = "Python SDK for LangGraph Approval Hub — human-in-the-loop approval workflows"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests>=2.28"]

[project.urls]
Homepage = "https://github.com/surya-mr/langgraph-approval-hub"
