[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-approval-hub"
version = "0.2.1"
description = "Python SDK for LangGraph Approval Hub — human-in-the-loop approval workflows"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["langgraph", "human-in-the-loop", "approval", "workflow", "ai-agents", "langchain"]
dependencies = ["requests>=2.28"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://github.com/suryamr2002/langgraph-approval-hub"
Documentation = "https://langgraph-approval-hub.vercel.app/docs"
"Bug Tracker" = "https://github.com/suryamr2002/langgraph-approval-hub/issues"
Changelog = "https://github.com/suryamr2002/langgraph-approval-hub/releases"
